# hdec_lidar_slam_and_localization

./: .gitignore  README.md
FAST_LIO/: CMakeLists.txt
FAST_LIO/Log/: mat_pre.txt
FAST_LIO/config/: avia.yaml  hesai.yaml  ouster64.yaml
FAST_LIO/include/IKFoM_toolkit/esekfom/: esekfom.hpp
FAST_LIO/launch/: mapping_hesai.launch
FAST_LIO/rviz_cfg/: loam_livox.rviz
FAST_LIO/src/: laserMapping.cpp  laserMapping_backup.cpp  preprocess.cpp
faster_lio/: package.xml
faster_lio/app/: run_mapping_offline.cc  run_mapping_online.cc
faster_lio/cmake/: packages.cmake
faster_lio/config/: hesai32.yaml  ouster128.yaml  ouster64.yaml  velodyne.yaml  velodyne_camera.yaml
faster_lio/include/: common_lib.h  laser_mapping.h  utils.h
faster_lio/include/IKFoM_toolkit/esekfom/: esekfom.hpp
faster_lio/launch/: mapping_hesai32.launch  mapping_ouster128.launch  mapping_ouster64.launch  mapping_velodyne.launch  mapping_velodyne_camera.launch
faster_lio/msg/: Frame.msg
faster_lio/rviz_cfg/: loam_livox.rviz
faster_lio/src/: CMakeLists.txt  laser_mapping.cc  pointcloud_preprocess.cc
lidar_localization/: CMakeLists.txt  package.xml
lidar_localization/Map/: OptimizedMap.pcd
lidar_localization/config/: velodyne.yaml
lidar_localization/launch/: localization_velodyne.launch
lidar_localization/rviz/: lidar_local.rviz
lidar_localization/src/: lidar_localization.cpp
nano_gicp/include/nano_gicp/: lsq_registration.hpp  point_type_nano_gicp.hpp
nano_gicp/src/: nano_gicp.cc  nanoflann.cc
octomap_mapping-kinetic-devel/octomap_server/launch/: octomap_mapping.launch  octomap_mapping_nodelet.launch
pose_graph_optimization/: CMakeLists.txt  package.xml
pose_graph_optimization/config/: hesai.yaml  hesai_pg.yaml  ouster64.yaml  ouster_pg.yaml  velodyne.yaml  velodyne_pg.yaml
pose_graph_optimization/include/: common_lib.h
pose_graph_optimization/include/solid/: solid.cpp  solid_module.h
pose_graph_optimization/launch/: mapping_hesai.launch  mapping_hesai_pg.launch  mapping_ouster64.launch  mapping_ouster_pg.launch  mapping_velodyne_pg.launch
pose_graph_optimization/src/: poseGraphOptimization.cpp
